test/types/records/vass/issue-11846-b.good
issue-11846-b.chpl:7: error: the type of the actual argument 'R3' is generic
note: generic actual arguments are not currently supported
